--- a/src/app/about/about-modal.component.html
+++ b/src/app/about/about-modal.component.html
@@ -5,7 +5,7 @@
                 <div class="ion-text-center">
                     <img class="about-welcome" [src]="appAboutImageUrl" alt="{{appName}}">
                 </div>
-                <div class="ion-text-center">
+                <div class="app-name ion-text-center">
                     {{appName}}
                 </div>
                 <div class="ion-text-center">
