--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,7 +87,7 @@ body {
         }
 
         &.my-zg {
-            font-family: Zawgyi-One;
+            font-family: Zawgyi-One, sans-serif;
         }
 
         &.my-uni {
@@ -109,7 +109,7 @@ body {
 }
 
 .my-zg {
-    font-family: Zawgyi-One;
+    font-family: Zawgyi-One, sans-serif;
 }
 
 .my-uni {
