--- a/src/app/about/about-modal.component.scss
+++ b/src/app/about/about-modal.component.scss
@@ -1,61 +1,18 @@
-ion-grid, ion-row {
-    height: 100%;
-}
-
-img.about-welcome-img {
-    max-width: 50%;
-    max-height: 50%;
-
-    // Portrait
-    //
-    // iPhone: 568, 640, 667,  736, 812,  896
-    //  Android: 640, 732, 740, 824, 847,  853
-
-    @media screen and (min-height: 741px) and (max-height: 896px) {
-        max-width: 75%;
-        max-height: 75%;
-    }
-
-    @media screen and (min-height: 668px) and (max-height: 740px) {
-        max-width: 70%;
-        max-height: 70%;
-    }
-
-    @media screen and (min-height: 481px) and (max-height: 667px) {
-        max-width: 65%;
-        max-height: 65%;
-    }
-
-    // Landscape
-    //
-    // 480
-    @media screen and (min-height: 421px) and (max-height: 480px) {
-        max-width: 28%;
-        max-height: 28%;
-    }
-
-    // // 375, 414
-    @media screen and (min-height: 361px) and (max-height: 420px) {
-        max-width: 27%;
-        max-height: 27%;
-    }
-
-    // // 320, 360
-    @media screen and (min-height: 281px) and (max-height: 360px) {
-        max-width: 26%;
-        max-height: 26%;
-    }
-
-    // 240
-    @media screen and (max-height: 280px) {
-        max-width: 23%;
-        max-height: 23%;
-    }
+ion-icon.app-logo {
+    padding: 10px;
+    color: #ffffff !important;
+    background: #8764B8 !important;
+    border: #ffffff solid 1px;
+    margin-right: 20px;
 }
 
 .about-content {
     .about-section + .about-section {
         margin-top: 24px;
+    }
+
+    .about-section.what-is-new {
+        margin-top: 12px;
     }
 
     h3.subtitle {
@@ -69,12 +26,12 @@ img.about-welcome-img {
         padding: 0;
 
         li + li {
-            margin-top: 8px;
+            margin-top: 10px;
         }
     }
 
     .share-btn {
         margin-top: 12px;
-        margin-bottom: 8px;
+        margin-bottom: 6px;
     }
 }
