Update about component

--- a/src/app/about/about-modal.component.html
+++ b/src/app/about/about-modal.component.html
@@ -10,16 +10,15 @@
         <div class="about-content myanmar-text my-uni" lang="my">
             <div class="about-section what-is-new">
                 <h3 class="subtitle">ယခုဗားရှင်းအသစ်တွင်</h3>
-                <p>Dark mode ပြောင်းနိုင်အောင် လုပ်ဆောင်ပေးထားခြင်း၊ အချို့သော bug များကို ပြုပြင်ထားခြင်းနှင့်
-                    အခြားတိုးတက်မှုများ ပါဝင်ပါတယ်။</p>
+                <p>အချို့သော bug များကို ပြုပြင်ထားခြင်းနှင့် အခြားတိုးတက်မှုများ ပါဝင်ပါတယ်။</p>
             </div>
             <div class="about-section features">
                 <h3 class="subtitle">ထူးခြားချက်များ</h3>
                 <ul class="features-list">
                     <li>
                         ဇော်ဂျီ နှင့် မြန်မာ ယူနီကုဒ် တို့ကို အပြန်အလှန် အမှားအယွင်းမရှိ တိကျမှန်ကန်စွာ
-                        ပြောင်းပေးနိုင်အောင် မြန်မာစာလုံးပေါင်း သတ်ပုံကျမ်း၊ မြန်မာအဘိဓာန် နှင့်
-                        ဆိုရှယ်မီဒီယာများမှ စာသားများစွာဖြင့် သေချာစွာစမ်းသပ်ဖန်တီးပေးထားပါတယ်။
+                        ပြောင်းပေးနိုင်အောင် သေချာစွာစမ်းသပ်ဖန်တီးပေးထားပါတယ်။ ပါဌ်ဆင့် စကားလုံးများ၊ ကင်းစီးများ
+                        ပါရှိရင်လည်း ဇော်ဂျီ မှ ယူနီကုဒ်၊ ယူနီကုဒ် မှ ဇော်ဂျီ မှန်မှန်ကန်ကန်ပြောင်းလဲပေးနိုင်ပါတယ်။
                     </li>
                     <li>
                         စာရိုက်လိုက်တာနှင့် ဇော်ဂျီလား၊ ယူနီကုဒ်လား ဆိုတာကို သိရှိနားလည်ပြီး အလိုအလျောက်
@@ -35,7 +34,7 @@
                         အင်တာနက် မရှိချိန်တွင်လည်း အချိန်မရွေး အသုံးပြုနိုင်ပါတယ်။
                     </li>
                     <li>
-                        ကြော်ငြာများမပါရှိခြင်း၊ အခမဲ့ဖြစ်ခြင်းနှင့် open source ကိုပါ GitHub ကနေရယူနိုင်ပါတယ်။
+                        ကြော်ငြာများမပါရှိခြင်း၊ အခမဲ့ဖြစ်ခြင်းအပြင် open source ကိုပါ GitHub ကနေရယူနိုင်ပါတယ်။
                     </li>
                 </ul>
             </div>
@@ -45,6 +44,20 @@
                     Zawgyi Unicode Converter ကို DagonMetric ရဲ့ Myanmar Tools
                     အဖွဲ့ကနေ ဖန်တီးခဲ့ပြီး open source MIT license အနေနှင့် အခမဲ့ မျှဝေထားခြင်းဖြစ်ပါတယ်။
                 </p>
+            </div>
+            <div class="about-section short-description">
+                <h3 class="subtitle">ကွန်ပျူတာ (သို့) iPhone / iPad အသုံးပြုသူများအတွက်</h3>
+                <p>
+                    ကွန်ပျူတာ (သို့) iPhone / iPad အသုံးပြုသူများအတွက် အောက်ပါ link ကို browser ဖြင့်ဖွင့်ပြီး
+                    အသုံးပြုနိုင်ပါတယ်။
+                </p>
+                <p class="web-app-link-text">
+                    <a
+                        href="https://zawgyi-unicode-converter.myanmartools.org">https://zawgyi-unicode-converter.myanmartools.org/</a>
+                </p>
+                <p>အထက်ပါ website မှာ Progressive Web Application (PWA) ဖြစ်တဲ့အတွက် မည်သည့် device တွင်မဆို
+                    အသုံးပြုနိုင်ပြီး အင်တာနက်မရှိချိန်တွင်လည်း offline
+                    အသုံးပြုနိုင်ပါတယ်။</p>
             </div>
             <div class="about-section long-description">
                 <h3 class="subtitle">ပိုမိုသိရှိရန်</h3>
