--- a/src/app/about/about-modal.component.scss
+++ b/src/app/about/about-modal.component.scss
@@ -30,6 +30,11 @@ ion-icon.app-logo {
         }
     }
 
+    .web-app-link-text {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
     .share-btn {
         margin-top: 12px;
         margin-bottom: 6px;
