--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,15 +10,15 @@
         <ion-content>
             <ion-item-group>
                 <ion-item-divider>
-                    <ion-label class="myanmar-text my-uni">
-                        အသုံးဝင်မည့် link များ
+                    <ion-label>
+                        Community & Links
                     </ion-label>
                 </ion-item-divider>
                 <ion-list lines="none">
                     <ion-menu-toggle *ngFor="let navLinkItem of navLinks">
                         <ion-item [href]="[navLinkItem.url]">
                             <ion-icon slot="start" [name]="navLinkItem.iconName"></ion-icon>
-                            <ion-label class="myanmar-text my-uni">
+                            <ion-label>
                                 {{navLinkItem.label}}
                             </ion-label>
                         </ion-item>
@@ -26,16 +26,16 @@
                     <ion-menu-toggle>
                         <ion-item button (click)="showHelpModal()">
                             <ion-icon slot="start" name="help"></ion-icon>
-                            <ion-label class="myanmar-text my-uni">
-                                အကူအညီ နှင့် တုံ့ပြန်ချက်
+                            <ion-label>
+                                Help & Feedback
                             </ion-label>
                         </ion-item>
                     </ion-menu-toggle>
                     <ion-menu-toggle>
                         <ion-item button (click)="showAboutModal()">
                             <ion-icon slot="start" name="info"></ion-icon>
-                            <ion-label class="myanmar-text my-uni">
-                                အကြောင်း
+                            <ion-label>
+                                About
                             </ion-label>
                         </ion-item>
                     </ion-menu-toggle>
@@ -43,24 +43,24 @@
             </ion-item-group>
             <ion-item-group>
                 <ion-item-divider>
-                    <ion-label class="myanmar-text my-uni">
-                        မျှဝေခြင်း နှင့် သုံးသပ်ချက်
+                    <ion-label>
+                        Sharing & Review
                     </ion-label>
                 </ion-item-divider>
                 <ion-list lines="none">
                     <ion-menu-toggle>
                         <ion-item button (click)="showShareSheet()">
                             <ion-icon slot="start" name="share"></ion-icon>
-                            <ion-label class="myanmar-text my-uni">
-                                မျှဝေရန်
+                            <ion-label>
+                                Share
                             </ion-label>
                         </ion-item>
                     </ion-menu-toggle>
                     <ion-menu-toggle>
                         <ion-item button (click)="promptForRating()">
                             <ion-icon slot="start" name="star"></ion-icon>
-                            <ion-label class="myanmar-text my-uni">
-                                သုံးသပ်ချက်ပေးရန်
+                            <ion-label>
+                                Rate
                             </ion-label>
                         </ion-item>
                     </ion-menu-toggle>
@@ -68,13 +68,13 @@
             </ion-item-group>
             <ion-item-group>
                 <ion-item-divider>
-                    <ion-label class="myanmar-text my-uni">
-                        <h3 class="my-uni">Setting များ ချိန်ညှိရန်</h3>
+                    <ion-label>
+                        <h3>Personalization</h3>
                     </ion-label>
                 </ion-item-divider>
                 <ion-list lines="none">
                     <ion-item>
-                        <ion-label class="myanmar-text my-uni">{{colorModeText}}</ion-label>
+                        <ion-label>Dark mode</ion-label>
                         <ion-toggle [(ngModel)]="isDarkMode"></ion-toggle>
                     </ion-item>
                 </ion-list>
@@ -83,8 +83,8 @@
         <ion-footer>
             <ion-toolbar>
                 <ion-buttons slot="start">
-                    <ion-button color="medium" [href]="privacyUrl" class="my-uni">
-                        ပုဂ္ဂိုလ်ရေးအချက်အလက်ဆိုင်ရာမူဝါဒ
+                    <ion-button color="medium" [href]="privacyUrl">
+                        Privacy
                     </ion-button>
                 </ion-buttons>
             </ion-toolbar>
