--- a/src/app/about/about-modal.component.html
+++ b/src/app/about/about-modal.component.html
@@ -10,9 +10,7 @@
         <div class="about-content myanmar-text my-uni" lang="my">
             <div class="about-section what-is-new">
                 <h3 class="subtitle">ယခုဗားရှင်းအသစ်တွင်</h3>
-                <p>Clear button ထည့်သွင်းပေးထားခြင်း၊ ဇော်ဂျီ ယူနီကုဒ် auto detect လုပ်ရာတွင်
-                    ပါဌ်ဆင့်စကားလုံးများပါဝင်ပါက ပိုမိုမှန်ကန်အောင် ပြုပြင်ထားခြင်း၊ အချို့သော bug များကို
-                    ပြုပြင်ထားခြင်းနှင့် အခြားတိုးတက်မှုများ ပါဝင်ပါတယ်။</p>
+                <p>အချို့သော bug များကိုပြုပြင်ထားခြင်းနှင့် အခြားတိုးတက်မှုများ ပါဝင်ပါတယ်။</p>
             </div>
             <div class="about-section features">
                 <h3 class="subtitle">ထူးခြားချက်များ</h3>
@@ -81,7 +79,7 @@
                 </p>
                 <div lang="en">
                     <ion-button fill="clear" class="share-btn" (click)="showShareSheet()">
-                        <ion-icon name="share"></ion-icon> SHARE
+                        <ion-icon name="share-social"></ion-icon> SHARE
                     </ion-button>
                 </div>
             </div>
