--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,3 +18,15 @@
         margin-right: 12px;
     }
 }
+
+.sponsor-card {
+    .sponsor-logo {
+        width: 48px;
+        height: 48px;
+    }
+
+    .sponsor-website {
+        margin-top: 15px;
+        font-weight: 600
+    }
+}
