--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -123,7 +123,7 @@
     color: #FF6F00;
 }
 
-body.dark {
+body.dark, .md body.dark {
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
 
